<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#dfdfdf"
    android:orientation="vertical"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="15.0dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/out_name_edit_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ems="10"
            android:hint="@string/out_name"
            android:inputType="textPersonName"
            android:textColor="#000000" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:text="@string/out_name"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="15.0dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/out_room_edit_layout"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:ems="10"
            android:hint="@string/out_room"
            android:inputType="number" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/out_room_sub"
        android:textColor="#000000" />

    <RadioGroup
        android:id="@+id/out_what_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="5dp" >

        <RadioButton
            android:id="@+id/out_what1_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/out_outing"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/out_what2_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_sleepover"
            android:textColor="#000000" />
    </RadioGroup>

    <TextView
        android:id="@+id/out_resultF_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/out_result"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/out_submit_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0.0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:text="@string/out_submit" />

        <Button
            android:id="@+id/out_log_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0.0px"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:text="@string/out_submit_list" />
    </LinearLayout>

</LinearLayout>